--- a/package.json
+++ b/package.json
@@ -7,10 +7,22 @@
     "vue": "^2.5.17"
   },
   "devDependencies": {
-    "webpack": "^4.20.2"
+    "@babel/core": "^7.1.2",
+    "@babel/preset-env": "^7.1.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.4",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-3": "^6.24.1",
+    "html-webpack-plugin": "^3.2.0",
+    "vue-loader": "^15.4.2",
+    "vue-template-compiler": "^2.5.17",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9"
   },
   "scripts": {
-    "start": "webpack --config build/webpack.config.js"
+    "dev": "webpack-dev-server --mode development --progress --hot --open --config build/webpack.config.js",
+    "build": "webpack --mode production --progress --config build/webpack.config.js"
   },
   "author": "",
   "license": "ISC"
