--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "webpack-dev-server": "^3.1.9"
   },
   "scripts": {
-    "dev": "webpack-dev-server --mode development --progress --hot --open --config build/webpack.config.js",
+    "start": "webpack-dev-server --mode development --progress --hot --open --config build/webpack.config.js",
     "build": "webpack --mode production --progress --config build/webpack.config.js"
   },
   "author": "",
