--- a/.babelrc
+++ b/.babelrc
@@ -6,5 +6,9 @@
         "useBuiltIns": "entry"
       }
     ]
+  ],
+  "plugins": [
+    ["@babel/plugin-proposal-decorators", { "legacy": true }],
+    ["@babel/plugin-proposal-class-properties", { "loose" : true }]
   ]
 }
